# monero-java

./: CMakeLists.txt
.github/workflows/: all-build.yml  core-build.yml  macos-build.yml  ubuntu-build.yml  windows-build.yml  windows_cross-build.yml
patches/: monero-cpp.patch
